--- a/06company/index.html
+++ b/06company/index.html
@@ -28,48 +28,48 @@
                         <a href="">NOW</a>
                         <ul class="submenu">
                         </li>
-                            <li><a href="#">LATEST</a></li>
-                            <li><a href="#">보도자료</a></li>
-                            <li><a href="#">공지사항</a></li>
+                            <li><a href="#">LATEST<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">보도자료<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">공지사항<i class="fa-solid fa-angle-right"></i></a></li>
                         </ul>
                     <li class="mbSub">
                         <a href="">사업소개</a>
                         <ul class="submenu">
-                            <li><a href="#">ONE-STOP 물류솔루션</a></li>
-                            <li><a href="#">TES</a></li>
+                            <li><a href="#">ONE-STOP 물류솔루션<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">TES<i class="fa-solid fa-angle-right"></i></a></li>
                         </ul>
                     </li>
                     <li class="mbSub">
                         <a href="">글로벌네트워크</a>
                         <ul class="submenu">
-                            <li><a href="#">글로벌 현황</a></li>
-                            <li><a href="#">Global Family</a></li>
+                            <li><a href="#">글로벌 현황<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">Global Family<i class="fa-solid fa-angle-right"></i></a></li>
                         </ul>
                     </li>
                     <li class="mbSub">
                         <a href="">회사정보</a>
                         <ul class="submenu">
-                            <li><a href="#">회사소개</a></li>
-                            <li><a href="#">라이브러리</a></li>
-                            <li><a href="#">스폰서십</a></li>
-                            <li><a href="#">투자정보</a></li>
+                            <li><a href="#">회사소개<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">라이브러리<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">스폰서십<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">투자정보<i class="fa-solid fa-angle-right"></i></a></li>
                         </ul>
                     </li>
                     <li class="mbSub">
                         <a href="">지속가능경영</a>
                         <ul class="submenu">
-                            <li><a href="#">지속가능경영</a></li>
-                            <li><a href="#">사회공헌</a></li>
-                            <li><a href="#">윤리경영</a></li>
+                            <li><a href="#">지속가능경영<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">사회공헌<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">윤리경영<i class="fa-solid fa-angle-right"></i></a></li>
                         </ul>
                     </li>
                     <li class="mbSub">
                         <a href="">고객지원</a>
                         <ul class="submenu">
-                            <li><a href="#">사업별문의처</a></li>
-                            <li><a href="#">자주 묻는 질문</a></li>
-                            <li><a href="#">1:1 문의</a></li>
-                            <li><a href="#">택배 조회</a></li>
+                            <li><a href="#">사업별문의처<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">자주 묻는 질문<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">1:1 문의<i class="fa-solid fa-angle-right"></i></a></li>
+                            <li><a href="#">택배 조회<i class="fa-solid fa-angle-right"></i></a></li>
                         </ul>
                     </li>
                 </ul>
@@ -109,6 +109,7 @@
                         <div class="msrIcon"></div>
                     </div>
                 </div>
+                
             </div>
         </div>
     </header>
@@ -162,14 +163,14 @@
 
     <section class="contents1">
         <ul>
-            <li style="background-image:url(./images/content_img01.png)">1</li>
-            <li style="background-image:url(./images/content_img02.png)">2</li>
-            <li style="background-image:url(./images/content_img03.png)">3</li>
-            <li style="background-image:url(./images/content_img04.png)">4</li>
-            <li style="background-image:url(./images/content_img05.png)">5</li>
-            <li style="background-image:url(./images/content_img06.png)">6</li>
-            <li style="background-image:url(./images/content_img07.png)">7</li>
-            <li style="background-image:url(./images/content_img08.png)">8</li>
+            <li style="background-image:url(./images/content_img01.png)"></li>
+            <li style="background-image:url(./images/content_img02.png)"></li>
+            <li style="background-image:url(./images/content_img03.png)"></li>
+            <li style="background-image:url(./images/content_img04.png)"></li>
+            <li style="background-image:url(./images/content_img05.png)"></li>
+            <li style="background-image:url(./images/content_img06.png)"></li>
+            <li style="background-image:url(./images/content_img07.png)"></li>
+            <li style="background-image:url(./images/content_img08.png)"></li>
         </ul>
     </section>
     <section class="contents2">
@@ -234,6 +235,10 @@
     <section class="contents3">
         <ul>
             <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            
         </ul>
     </section>
     <script src="js/script.js"></script>
