--- a/06company/index.html
+++ b/06company/index.html
@@ -302,21 +302,64 @@
     </section>
 
     <section class="contents4">
-        <ul>
-            <li style="background-image: url(./images/section4_img1.png);">
-                <h5>지속가능경영</h5>
+        <ul class="mbSlide2">
+            <li class="slide2_item" style="background-image: url(./images/section4_img1.png);">
+                <h5 class="slide2_txt">지속가능경영</h5>
                 <p>사람과 생활에 행복을 주는 기업으로<br>함께 하겠습니다.</p>
                 <a href="">자세히보기</a>
             </li>
-            <li style="background-image: url(./images/section4_img2.png);">
+            <li class="slide2_item" style="background-image: url(./images/section4_img2.png);">
                 <h5>인재채용</h5>
                 <p>창의력을 발휘하여 발전하는<br>인재를 기다립니다.</p>
                 <a href="">자세히보기</a>
             </li>
-            
         </ul>
-
     </section>
+    <footer class="footerWrap">
+        <div class="ftbox1">
+            <div class="ftContentWrap1">
+                <ul >
+                    <li class="mb_ft_content1">
+                        <ul>
+                            <li><a href="">개인정보처리방침</a></li>
+                            <li><a href="">법적고지</a></li>
+                            <li><a href="">약관 및 운영방침</a></li>
+                            <li><a href="">그룹통합제보시스템</a></li>
+                            <li><a href="">사이트맵</a></li>
+                            <li><a href="">FollowUs</a></li>
+                            <li>
+                                <div class="ftIcon1">
+                                    <a style="background-image: url(./images/ftIcon1.png);" href=""></a>
+                                    <a style="background-image: url(./images/ftIcon2.png);" href=""></a>
+                                    <a style="background-image: url(./images/ftIcon3.png);" href=""></a>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="mb_ft_content2">
+                        <a href=""class="ftToggle">
+                            그룹 계열사 바로가기<img src="./images/ftIcon4.png" alt=""></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="ftContentWrap2">
+            <div class="ftbox2">
+                <h5><img src="./images/logo_footer_ko.png" alt=""></h5>
+                <div class="ftTxtWrap">
+                    <p>CJ대한통운(주)  사업자등록번호 : 110-81-05034  대표자: 강신호<br>
+                        주소 : 서울특별시 중구 세종대로 9길 53  택배고객센터 : 1588-1255 (월~금 09:00~18:00 / 토 09:00~13:00)
+                        </p>
+                        <span>COPYRIGHT 2022 BY CJ Logistics Corporation  ALL RIGHT RESERVED.</span>
+                </div>
+            </div>
+            <div class="ftIcon2">
+                <img src="./images/logo_award1_2022.png" alt="">
+                <img src="./images/logo_award2_2022.png" alt="">
+            </div>
+        </div>
+
+    </footer>
     <script src="js/script.js"></script>
 </body>
 
