--- a/06company/index.html
+++ b/06company/index.html
@@ -11,9 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="./css/jquery.bxslider.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="./js/jquery-3.1.1.min.js"></script>
     <script src="./js/jquery.bxslider.js"></script>
 </head>
@@ -27,51 +31,51 @@
                     <li class="mbSub">
                         <a href="">NOW</a>
                         <ul class="submenu">
-                        </li>
-                            <li><a href="#">LATEST<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">보도자료<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">공지사항<i class="fa-solid fa-angle-right"></i></a></li>
-                        </ul>
-                    <li class="mbSub">
-                        <a href="">사업소개</a>
-                        <ul class="submenu">
-                            <li><a href="#">ONE-STOP 물류솔루션<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">TES<i class="fa-solid fa-angle-right"></i></a></li>
-                        </ul>
                     </li>
-                    <li class="mbSub">
-                        <a href="">글로벌네트워크</a>
-                        <ul class="submenu">
-                            <li><a href="#">글로벌 현황<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">Global Family<i class="fa-solid fa-angle-right"></i></a></li>
-                        </ul>
-                    </li>
-                    <li class="mbSub">
-                        <a href="">회사정보</a>
-                        <ul class="submenu">
-                            <li><a href="#">회사소개<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">라이브러리<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">스폰서십<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">투자정보<i class="fa-solid fa-angle-right"></i></a></li>
-                        </ul>
-                    </li>
-                    <li class="mbSub">
-                        <a href="">지속가능경영</a>
-                        <ul class="submenu">
-                            <li><a href="#">지속가능경영<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">사회공헌<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">윤리경영<i class="fa-solid fa-angle-right"></i></a></li>
-                        </ul>
-                    </li>
-                    <li class="mbSub">
-                        <a href="">고객지원</a>
-                        <ul class="submenu">
-                            <li><a href="#">사업별문의처<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">자주 묻는 질문<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">1:1 문의<i class="fa-solid fa-angle-right"></i></a></li>
-                            <li><a href="#">택배 조회<i class="fa-solid fa-angle-right"></i></a></li>
-                        </ul>
-                    </li>
+                    <li><a href="#">LATEST<i class="fa-solid fa-angle-right"></i></a></li>
+                    <li><a href="#">보도자료<i class="fa-solid fa-angle-right"></i></a></li>
+                    <li><a href="#">공지사항<i class="fa-solid fa-angle-right"></i></a></li>
+                </ul>
+                <li class="mbSub">
+                    <a href="">사업소개</a>
+                    <ul class="submenu">
+                        <li><a href="#">ONE-STOP 물류솔루션<i class="fa-solid fa-angle-right"></i></a></li>
+                        <li><a href="#">TES<i class="fa-solid fa-angle-right"></i></a></li>
+                    </ul>
+                </li>
+                <li class="mbSub">
+                    <a href="">글로벌네트워크</a>
+                    <ul class="submenu">
+                        <li><a href="#">글로벌 현황<i class="fa-solid fa-angle-right"></i></a></li>
+                        <li><a href="#">Global Family<i class="fa-solid fa-angle-right"></i></a></li>
+                    </ul>
+                </li>
+                <li class="mbSub">
+                    <a href="">회사정보</a>
+                    <ul class="submenu">
+                        <li><a href="#">회사소개<i class="fa-solid fa-angle-right"></i></a></li>
+                        <li><a href="#">라이브러리<i class="fa-solid fa-angle-right"></i></a></li>
+                        <li><a href="#">스폰서십<i class="fa-solid fa-angle-right"></i></a></li>
+                        <li><a href="#">투자정보<i class="fa-solid fa-angle-right"></i></a></li>
+                    </ul>
+                </li>
+                <li class="mbSub">
+                    <a href="">지속가능경영</a>
+                    <ul class="submenu">
+                        <li><a href="#">지속가능경영<i class="fa-solid fa-angle-right"></i></a></li>
+                        <li><a href="#">사회공헌<i class="fa-solid fa-angle-right"></i></a></li>
+                        <li><a href="#">윤리경영<i class="fa-solid fa-angle-right"></i></a></li>
+                    </ul>
+                </li>
+                <li class="mbSub">
+                    <a href="">고객지원</a>
+                    <ul class="submenu">
+                        <li><a href="#">사업별문의처<i class="fa-solid fa-angle-right"></i></a></li>
+                        <li><a href="#">자주 묻는 질문<i class="fa-solid fa-angle-right"></i></a></li>
+                        <li><a href="#">1:1 문의<i class="fa-solid fa-angle-right"></i></a></li>
+                        <li><a href="#">택배 조회<i class="fa-solid fa-angle-right"></i></a></li>
+                    </ul>
+                </li>
                 </ul>
             </nav>
             <nav class="navbar02">
@@ -105,19 +109,19 @@
                         </div>
                     </div>
                     <div class="mSrWrap">
-                        <input class="mInp" type="text"placeholder="검색어를 입력하세요">
+                        <input class="mInp" type="text" placeholder="검색어를 입력하세요">
                         <div class="msrIcon"></div>
                     </div>
                 </div>
-                
+
             </div>
             <div class="mbFooter">
                 <div class="mbFtIcon">
                     <p>Follow Us</p>
-                    <a href=""style="background-image: url(./images/icons_sns_gnb.png);"></a>
-                    <a href=""style="background-image: url(./images/icons_sns_gnb.png);"></a>
-                    <a href=""style="background-image: url(./images/icons_sns_gnb.png);"></a>
-                    <a href=""style="background-image: url(./images/icons_sns_gnb.png);"></a>
+                    <a href="" style="background-image: url(./images/icons_sns_gnb.png);"></a>
+                    <a href="" style="background-image: url(./images/icons_sns_gnb.png);"></a>
+                    <a href="" style="background-image: url(./images/icons_sns_gnb.png);"></a>
+                    <a href="" style="background-image: url(./images/icons_sns_gnb.png);"></a>
                 </div>
                 <div class="mbFtBg"></div>
             </div>
@@ -297,28 +301,30 @@
                     </div>
                 </a>
             </li>
-            
+
         </ul>
     </section>
 
-    <section class="contents4">
-        <ul class="mbSlide2">
-            <li class="slide2_item" style="background-image: url(./images/section4_img1.png);">
+    <section class="contents4 swiper mySwiper">
+        <div class="swiper-wrapper">
+            <div class="slide2_item swiper-slide" style="background-image: url(./images/section4_img1.png);">
                 <h5 class="slide2_txt">지속가능경영</h5>
                 <p>사람과 생활에 행복을 주는 기업으로<br>함께 하겠습니다.</p>
                 <a href="">자세히보기</a>
-            </li>
-            <li class="slide2_item" style="background-image: url(./images/section4_img2.png);">
+            </div>
+            <div class="slide2_item swiper-slide" style="background-image: url(./images/section4_img2.png);">
                 <h5>인재채용</h5>
                 <p>창의력을 발휘하여 발전하는<br>인재를 기다립니다.</p>
                 <a href="">자세히보기</a>
-            </li>
-        </ul>
+            </div>
+        </div>
+        <div class="swiper-pagination"></div>
     </section>
+
     <footer class="footerWrap">
         <div class="ftbox1">
             <div class="ftContentWrap1">
-                <ul >
+                <ul>
                     <li class="mb_ft_content1">
                         <ul>
                             <li><a href="">개인정보처리방침</a></li>
@@ -337,7 +343,7 @@
                         </ul>
                     </li>
                     <li class="mb_ft_content2">
-                        <a href=""class="ftToggle">
+                        <a href="" class="ftToggle">
                             그룹 계열사 바로가기<img src="./images/ftIcon4.png" alt=""></a>
                     </li>
                 </ul>
@@ -347,10 +353,10 @@
             <div class="ftbox2">
                 <h5><img src="./images/logo_footer_ko.png" alt=""></h5>
                 <div class="ftTxtWrap">
-                    <p>CJ대한통운(주)  사업자등록번호 : 110-81-05034  대표자: 강신호<br>
-                        주소 : 서울특별시 중구 세종대로 9길 53  택배고객센터 : 1588-1255 (월~금 09:00~18:00 / 토 09:00~13:00)
-                        </p>
-                        <span>COPYRIGHT 2022 BY CJ Logistics Corporation  ALL RIGHT RESERVED.</span>
+                    <p>CJ대한통운(주) 사업자등록번호 : 110-81-05034 대표자: 강신호<br>
+                        주소 : 서울특별시 중구 세종대로 9길 53 택배고객센터 : 1588-1255 (월~금 09:00~18:00 / 토 09:00~13:00)
+                    </p>
+                    <span>COPYRIGHT 2022 BY CJ Logistics Corporation ALL RIGHT RESERVED.</span>
                 </div>
             </div>
             <div class="ftIcon2">
