--- a/todolist/index.html
+++ b/todolist/index.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>todolist03_obj02</title>
+    <title>todolist</title>
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <style>
-        .inpWrap{display: flex;margin-bottom: 10px;}
+        *{padding: 0;margin: 0 auto;}
+        html,body{height: 100%;}
+        li{list-style: none;}
+        .inpWrap{display: flex;margin-bottom: 10px;width: 420px;}
         .inp{width: 250px;height: 40px;margin-right: 10px;}
         .btn1,.btn2{height: 40px;margin-right: 10px;}
         .viewData {
-            width: 400px;
+            width: 410px;
         }
 
         .viewData li {
