--- a/todolist/index.html
+++ b/todolist/index.html
@@ -20,7 +20,7 @@
         body {
             height: 100%;
         }
-
+        a:link,a:visited{text-decoration: none;color: #333;}
         li {
             list-style: none;
         }
@@ -152,13 +152,13 @@
                 }
 
                 todoData += `<div class="inconWrap">`
-                todoData += `<a href="#" onclick="del(${i})">dell</a>`
+                todoData += `<a href="#1" onclick="del(${i})">dell</a>`
 
                 if (item.done == true) {
-                    todoData += `<a href="#" onclick="done(${i})">off</a>`
+                    todoData += `<a href="#1" onclick="done(${i})">off</a>`
 
                 } else {
-                    todoData += `<a href="#" onclick="done(${i})">on</a>`
+                    todoData += `<a href="#1" onclick="done(${i})">on</a>`
                 }
 
                 todoData += `</div>`
@@ -184,6 +184,7 @@
 
            
                 viewData.innerHTML = todoData
+                console.log("ok")
             })
         }
 
