--- a/08fullpage/index.html
+++ b/08fullpage/index.html
@@ -36,7 +36,7 @@
                     <ul class="share_link">
                         <li><a href="https://www.facebook.com/login.php?skip_api_login=1&api_key=966242223397117&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fsharer%2Fsharer.php%3Fu%3Dhttps%253A%252F%252Fhit2.nexon.com%252Fpre-register%26title%3D%255BHIT2%255D%2BHIT%2BTHE%2BWORLD%26description%26quote%26hashtag&cancel_url=https%3A%2F%2Fwww.facebook.com%2Fdialog%2Fclose_window%2F%3Fapp_id%3D966242223397117%26connect%3D0%23_%3D_&display=popup&locale=ko_KR" target="_balnk"></a></li>
                         <li><a href="https://twitter.com/intent/tweet?text=%5BHIT2%5D%20HIT%20THE%20WORLD%20%EC%83%88%EB%A1%AD%EA%B2%8C%20%EC%8B%9C%EC%9E%91%EB%90%98%EB%8A%94%20%EC%97%AC%EC%A0%95%EC%97%90%20%EB%AA%A8%ED%97%98%EA%B0%80%EB%8B%98%EC%9D%84%20%EC%B4%88%EB%8C%80%ED%95%A9%EB%8B%88%EB%8B%A4.&url=https%3A%2F%2Fhit2.nexon.com%2Fpre-register" target="_balnk"></a></li>
-                        <li><a href="" class="url_copy"data-clipboard-text="https://hit2.nexon.com/pre-register#section1"></a></li>
+                        <li><a href="" class="url_copy"data-clipboard-text="https://alsrl1234.github.io/2022web_site/08fullpage"></a></li>
                     </ul>
                 </li>
                 <li>
