--- a/08fullpage/index.html
+++ b/08fullpage/index.html
@@ -59,7 +59,7 @@
             <li><a href="#m4st" data-menuanchor="m4st"></a></li>
             <li><a href="#m5st" data-menuanchor="m5st"></a></li>
             <li><a href="#m6st" data-menuanchor="m6st"></a></li>
-            <li><a href="#m7st" data-menuanchor="m7st"></a></li>
+            <!-- <li><a href="#m7st" data-menuanchor="m7st"></a></li> -->
             <!-- <li><a href="#m8st" data-menuanchor="m8st" ></a></li> -->
         </ul>
         <div class="menu_link">
@@ -403,12 +403,21 @@
         </div>
     </div>
 
+    <div class="media_modal">
+        <ul>
+            <li class="media_bg">
+                <button class="media_close"></button>
+                <img src="./images/img01.png" alt="">
+            </li>
+        </ul>
+    </div>
+
 
     <div id="fullpage">
         <div class="section" id="page1">
             <div class="bg_video">
                 <video id="main_loop" data-autoplay muted loop>
-                    <source src="images/main_pc.webm">
+                    <source src="images/main_pc.mp4">
                 </video>
             </div>
             <div class="logo"></div>
@@ -442,7 +451,7 @@
                     <div class="swiper-slide">
                         <div class="stoy_video">
                             <video id="story_loop" muted onended="vi_slide()">
-                                <source src="images/story_01.webm">
+                                <source src="images/story_01.mp4">
                             </video>
                         </div>
                         <div class="tit"></div>
@@ -451,7 +460,7 @@
                     <div class="swiper-slide">
                         <div class="stoy_video">
                             <video id="story_loop" muted onended="vi_slide()">
-                                <source src="images/story_02.webm">
+                                <source src="images/story_02.mp4">
                             </video>
                         </div>
                         <div class="tit"></div>
@@ -460,7 +469,7 @@
                     <div class="swiper-slide">
                         <div class="stoy_video">
                             <video id="story_loop" muted onended="vi_slide()">
-                                <source src="images/story_03.webm">
+                                <source src="images/story_03.mp4">
                             </video>
                         </div>
                         <div class="tit"></div>
@@ -469,7 +478,7 @@
                     <div class="swiper-slide">
                         <div class="stoy_video" data-swiper-autoplay="2000">
                             <video id="story_loop" muted>
-                                <source src="images/story_04.webm">
+                                <source src="images/story_04.mp4">
                             </video>
                         </div>
                         <div class="tit"></div>
@@ -484,7 +493,7 @@
         <div class="section" id="page4">
             <div class="class_wrap">
                 <div class="class_video">
-                    <video src="./images/class_loop_6D3172495B.webm" data-autoplay muted loop id="class_bg"></video>
+                    <video src="./images/class_loop_6D3172495B.mp4" data-autoplay muted loop id="class_bg"></video>
                 </div>
                 <div class="tit"></div>
                 <button class="btn_class">
@@ -511,58 +520,60 @@
                 <div class="bg_cloud cloud4"></div>
             </div>
         </div>
+
+
+
         <div class="section bg-warning" id="page6">
             <div class="swiper mySwiper2">
                 <div class="swiper-wrapper media_wrap">
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img01.png" alt="">
+                        <img class="media_img" src="./images/img01.png" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img02.png" alt="">
+                        <img class="media_img" src="./images/img02.png" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img03.png" alt="">
+                        <img class="media_img" src="./images/img03.png" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img04.png" alt="">
+                        <img class="media_img" src="./images/img04.png" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img05.jpg" alt="">
+                        <img class="media_img" src="./images/img05.jpg" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img06.jpg" alt="">
+                        <img class="media_img" src="./images/img06.jpg" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img07.jpg" alt="">
+                        <img class="media_img" src="./images/img07.jpg" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img08.png" alt="">
+                        <img class="media_img" src="./images/img08.png" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img09.webp" alt="">
+                        <img class="media_img" src="./images/img09.webp" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img10.jpg" alt="">
+                        <img class="media_img" src="./images/img10.jpg" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img11.webp" alt="">
+                        <img class="media_img" src="./images/img11.webp" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img12.webp" alt="">
+                        <img class="media_img" src="./images/img12.webp" alt="">
                     </div>
                     <div class="swiper-slide media_slide">
-                        <img src="./images/img13.jpg" alt="">
+                        <img class="media_img" src="./images/img13.jpg" alt="">
                     </div>
                 </div>
                 <div class="swiper-pagination media-pager"></div>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
+            <div class="tit"></div>
         </div>
-        <div class="section bg-success" id="page7">
-            7
-        </div>
-    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
